<resources>
    <string name="app_name">酷狗音乐</string>
    <string name="btn_user_defined">自定义“我”首页</string>
    <!--性别对话框中的字符串-->
    <string name="dialog_sex_title">性别</string>
    <string name="dialog_sex_woman">女</string>
    <string name="dialog_sex_man">男</string>
    <string name="dialog_sex_confidentiality">保密</string>
    <string name="dialog_cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
